--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13876,3 +13876,57 @@
   timeWait: 4 mins
   timeBuild: 4 mins
   timeTotal: 8 mins
+- name: devspaces-server-rhel8
+  tag: 3.16-14.1725397115
+  taskId: 63915361
+  timeCreate: Tue Sep 3 20:58:35 2024
+  timeStart: Tue Sep 3 20:59:44 2024
+  timeFinish: Tue Sep 3 21:08:06 2024
+  timeWait: 1 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator
+  tag: 3.16-11.1725397116
+  taskId: 63915362
+  timeCreate: Tue Sep 3 20:58:36 2024
+  timeStart: Tue Sep 3 20:59:44 2024
+  timeFinish: Tue Sep 3 21:17:55 2024
+  timeWait: 1 mins
+  timeBuild: 18 mins
+  timeTotal: 19 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.16-6.1725397117
+  taskId: 63915364
+  timeCreate: Tue Sep 3 20:58:37 2024
+  timeStart: Tue Sep 3 20:59:45 2024
+  timeFinish: Tue Sep 3 21:07:20 2024
+  timeWait: 1 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.16-3.1725397118
+  taskId: 63915371
+  timeCreate: Tue Sep 3 20:58:38 2024
+  timeStart: Tue Sep 3 20:59:46 2024
+  timeFinish: Tue Sep 3 21:13:26 2024
+  timeWait: 1 mins
+  timeBuild: 13 mins
+  timeTotal: 14 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.16-4.1725397119
+  taskId: 63915383
+  timeCreate: Tue Sep 3 20:58:39 2024
+  timeStart: Tue Sep 3 21:00:31 2024
+  timeFinish: Tue Sep 3 21:15:27 2024
+  timeWait: 1 mins
+  timeBuild: 14 mins
+  timeTotal: 16 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-66
+  taskId: 63960253
+  timeCreate: Wed Sep 4 18:52:03 2024
+  timeStart: Wed Sep 4 18:52:13 2024
+  timeFinish: Wed Sep 4 18:56:53 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
