--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13480,3 +13480,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.17-5
+  taskId: 64058051
+  timeCreate: Mon Sep 9 04:00:54 2024
+  timeStart: Mon Sep 9 04:01:31 2024
+  timeFinish: Mon Sep 9 04:53:32 2024
+  timeWait: 0 mins
+  timeBuild: 52 mins
+  timeTotal: 52 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-4
+  taskId: 64058922
+  timeCreate: Mon Sep 9 05:04:26 2024
+  timeStart: Mon Sep 9 05:05:01 2024
+  timeFinish: Mon Sep 9 05:09:43 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
