chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13948,3 +13948,12 @@
   timeWait: 28 mins
   timeBuild: 4 mins
   timeTotal: 33 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-68
+  taskId: 64071410
+  timeCreate: Mon Sep 9 17:27:59 2024
+  timeStart: Mon Sep 9 17:28:25 2024
+  timeFinish: Mon Sep 9 17:33:25 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
