--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13975,3 +13975,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-67
+  taskId: 64108350
+  timeCreate: Tue Sep 10 13:14:50 2024
+  timeStart: Tue Sep 10 13:18:41 2024
+  timeFinish: Tue Sep 10 13:28:57 2024
+  timeWait: 3 mins
+  timeBuild: 10 mins
+  timeTotal: 14 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-70
+  taskId: 64109228
+  timeCreate: Tue Sep 10 13:40:17 2024
+  timeStart: Tue Sep 10 13:40:40 2024
+  timeFinish: Tue Sep 10 13:44:42 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
