--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13525,3 +13525,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator
+  tag: 3.17-9
+  taskId: 64130346
+  timeCreate: Wed Sep 11 04:27:24 2024
+  timeStart: Wed Sep 11 04:28:13 2024
+  timeFinish: Wed Sep 11 04:48:01 2024
+  timeWait: 0 mins
+  timeBuild: 19 mins
+  timeTotal: 20 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-6
+  taskId: 64131231
+  timeCreate: Wed Sep 11 04:54:50 2024
+  timeStart: Wed Sep 11 04:55:41 2024
+  timeFinish: Wed Sep 11 04:59:36 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
