Modifying scripts to remove devfile registry container but leave samples and other devfile functions intact.

--- a/product/ghira/components.json
+++ b/product/ghira/components.json
@@ -3,7 +3,7 @@
     {
         "team-a" : {
             "Description" : "Team A: Dashboard, devfile and plugin registries, open-vsx, operator + chectl/dsc, devfile-converter, configbump + traefik, image-puller, server, gateway, authentication, try-in-web-ide action, telemetry",
-            "Labels" : [ "area/dashboard", "area/factory/dashboard", "area/ts-workspace-client", "area/devfile-converter", "area/chectl", "area/install", "area/operator", "area/hosted-che", "area/image-puller", "area/devfile/v2", "area/devfile/v1", "area/samples", "area/getting-started", "area/factory/server", "area/che-server", "area/devfile-registry", "area/plugin-registry"  ],
+            "Labels" : [ "area/dashboard", "area/factory/dashboard", "area/ts-workspace-client", "area/devfile-converter", "area/chectl", "area/install", "area/operator", "area/hosted-che", "area/image-puller", "area/devfile/v2", "area/devfile/v1", "area/samples", "area/getting-started", "area/factory/server", "area/che-server", "area/plugin-registry"  ],
             "Email" : "ibuziuk@redhat.com",
             "GH_User":"ibuziuk"
         },
