--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13624,3 +13624,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.17-2
+  taskId: 64337766
+  timeCreate: Thu Sep 19 01:27:47 2024
+  timeStart: Thu Sep 19 01:28:39 2024
+  timeFinish: Thu Sep 19 01:34:40 2024
+  timeWait: 0 mins
+  timeBuild: 6 mins
+  timeTotal: 6 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-13
+  taskId: 64338555
+  timeCreate: Thu Sep 19 02:06:05 2024
+  timeStart: Thu Sep 19 02:07:30 2024
+  timeFinish: Thu Sep 19 02:11:23 2024
+  timeWait: 1 mins
+  timeBuild: 3 mins
+  timeTotal: 5 mins
