--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -534,7 +534,7 @@
         "CSV_VERSION_PREV": "3.14.0"
       },
       "3.16": {
-        "CSV_VERSION": "3.16.1,
+        "CSV_VERSION": "3.16.1",
         "CSV_VERSION_PREV": "3.16.0"
       },
       "3.x": {
