--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13993,3 +13993,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.16-22
+  taskId: 64355472
+  timeCreate: Thu Sep 19 14:52:46 2024
+  timeStart: Thu Sep 19 14:53:32 2024
+  timeFinish: Thu Sep 19 19:37:45 2024
+  timeWait: 0 mins
+  timeBuild: 284 mins
+  timeTotal: 284 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-71
+  taskId: 64366247
+  timeCreate: Thu Sep 19 19:44:30 2024
+  timeStart: Thu Sep 19 19:45:12 2024
+  timeFinish: Thu Sep 19 19:48:59 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
