chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13660,3 +13660,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator
+  tag: 3.17-14
+  taskId: 64382037
+  timeCreate: Fri Sep 20 11:33:32 2024
+  timeStart: Fri Sep 20 13:54:02 2024
+  timeFinish: Fri Sep 20 14:15:20 2024
+  timeWait: 140 mins
+  timeBuild: 21 mins
+  timeTotal: 161 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-15
+  taskId: 64383808
+  timeCreate: Fri Sep 20 14:23:31 2024
+  timeStart: Fri Sep 20 15:11:44 2024
+  timeFinish: Fri Sep 20 15:16:41 2024
+  timeWait: 48 mins
+  timeBuild: 4 mins
+  timeTotal: 53 mins
