--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13678,3 +13678,21 @@
   timeWait: 48 mins
   timeBuild: 4 mins
   timeTotal: 53 mins
+- name: devspaces-operator
+  tag: 3.17-15
+  taskId: 64454618
+  timeCreate: Mon Sep 23 23:19:12 2024
+  timeStart: Mon Sep 23 23:19:29 2024
+  timeFinish: Mon Sep 23 23:38:09 2024
+  timeWait: 0 mins
+  timeBuild: 18 mins
+  timeTotal: 18 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-16
+  taskId: 64455438
+  timeCreate: Mon Sep 23 23:56:13 2024
+  timeStart: Mon Sep 23 23:59:00 2024
+  timeFinish: Tue Sep 24 00:03:09 2024
+  timeWait: 2 mins
+  timeBuild: 4 mins
+  timeTotal: 6 mins
