--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13696,3 +13696,21 @@
   timeWait: 2 mins
   timeBuild: 4 mins
   timeTotal: 6 mins
+- name: devspaces-operator
+  tag: 3.17-16
+  taskId: 64510759
+  timeCreate: Wed Sep 25 07:44:39 2024
+  timeStart: Wed Sep 25 08:10:20 2024
+  timeFinish: Wed Sep 25 08:29:19 2024
+  timeWait: 25 mins
+  timeBuild: 18 mins
+  timeTotal: 44 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-17
+  taskId: 64511861
+  timeCreate: Wed Sep 25 08:36:03 2024
+  timeStart: Wed Sep 25 09:20:40 2024
+  timeFinish: Wed Sep 25 09:24:16 2024
+  timeWait: 44 mins
+  timeBuild: 3 mins
+  timeTotal: 48 mins
