--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13714,3 +13714,12 @@
   timeWait: 44 mins
   timeBuild: 3 mins
   timeTotal: 48 mins
+- name: devspaces-udi-rhel8
+  tag: 3.17-3
+  taskId: 64558529
+  timeCreate: Thu Sep 26 09:49:40 2024
+  timeStart: Thu Sep 26 09:49:58 2024
+  timeFinish: Thu Sep 26 10:43:25 2024
+  timeWait: 0 mins
+  timeBuild: 53 mins
+  timeTotal: 53 mins
