chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13723,3 +13723,12 @@
   timeWait: 0 mins
   timeBuild: 53 mins
   timeTotal: 53 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-19
+  taskId: 64562708
+  timeCreate: Thu Sep 26 11:23:20 2024
+  timeStart: Thu Sep 26 11:23:36 2024
+  timeFinish: Thu Sep 26 11:29:12 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
