--- a/dependencies/che-plugin-registry/deploy/openshift/devspaces-plugin-registry.yaml
+++ b/dependencies/che-plugin-registry/deploy/openshift/devspaces-plugin-registry.yaml
@@ -1,13 +1,3 @@
-#
-# Copyright (c) 2018-2023 Red Hat, Inc.
-#    This program and the accompanying materials are made
-#    available under the terms of the Eclipse Public License 2.0
-#    which is available at https://www.eclipse.org/legal/epl-2.0/
-#
-#  SPDX-License-Identifier: EPL-2.0
-#
-#  Contributors:
-#    Red Hat, Inc. - initial API and implementation
 apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
@@ -117,9 +107,10 @@ parameters:
   - name: IMAGE
     value: registry.redhat.io/devspaces/pluginregistry-rhel8
     displayName: Red Hat OpenShift Dev Spaces plugin registry image
-    description: Red Hat OpenShift Dev Spaces plugin registry container image. Defaults to registry.redhat.io/devspaces/pluginregistry-rhel8
+    description: Red Hat OpenShift Dev Spaces plugin registry container image. Defaults
+      to registry.redhat.io/devspaces/pluginregistry-rhel8
   - name: IMAGE_TAG
-    value: '3.17'
+    value: '3.18'
     displayName: Red Hat OpenShift Dev Spaces plugin registry version
     description: Red Hat OpenShift Dev Spaces plugin registry version
   - name: MEMORY_LIMIT
