--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13840,3 +13840,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-operator
+  tag: 3.17-17
+  taskId: 64653554
+  timeCreate: Mon Sep 30 18:46:39 2024
+  timeStart: Mon Sep 30 18:47:12 2024
+  timeFinish: Mon Sep 30 19:06:47 2024
+  timeWait: 0 mins
+  timeBuild: 19 mins
+  timeTotal: 20 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-24
+  taskId: 64653852
+  timeCreate: Mon Sep 30 19:32:01 2024
+  timeStart: Mon Sep 30 19:32:46 2024
+  timeFinish: Mon Sep 30 19:37:05 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
